@@ -1,12 +1,12 @@
 package io.kestra.plugin.core.http;
 
 import com.devskiller.friendly_id.FriendlyId;
-import com.google.common.base.Charsets;
 import com.google.common.collect.ImmutableMap;
 import io.kestra.core.http.client.HttpClientRequestException;
 import io.kestra.core.http.client.HttpClientResponseException;
 import io.kestra.core.http.client.configurations.*;
 import io.kestra.core.junit.annotations.KestraTest;
+import io.kestra.core.models.property.Property;
 import io.kestra.core.runners.RunContext;
 import io.kestra.core.runners.RunContextFactory;
 import io.kestra.core.serializers.JacksonMapper;
@@ -58,7 +58,7 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(server.getURL().toString() + "/hello")
+                .uri(Property.of(server.getURL().toString() + "/hello"))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
@@ -78,8 +78,8 @@ class RequestTest {
         Request task = Request.builder()
             .id(RequestTest.class.getSimpleName())
             .type(RequestTest.class.getName())
-            .uri(url)
-            .method("HEAD")
+            .uri(Property.of(url))
+            .method(Property.of("HEAD"))
             .build();
 
         RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
@@ -88,6 +88,28 @@ class RequestTest {
 
         assertThat(output.getUri(), is(URI.create(url)));
         assertThat(output.getHeaders().get("content-length").getFirst(), is("512789"));
+    }
+
+
+    @Test
+    void head404() throws Exception {
+        final String url = "https://bdnb-data.s3.fr-par.scw.cloud/bnb_export_metropole_sql_dump.tar.gz";
+
+        Request task = Request.builder()
+            .id(RequestTest.class.getSimpleName())
+            .type(RequestTest.class.getName())
+            .uri(Property.of(url))
+            .method(Property.of("HEAD"))
+            .build();
+
+        RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
+
+        HttpClientResponseException exception = assertThrows(
+            HttpClientResponseException.class,
+            () -> task.run(runContext)
+        );
+
+        assertThat(exception.getResponse().getStatus().getCode(), is(404));
     }
 
     @Test
@@ -100,7 +122,7 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(server.getURL().toString() + "/redirect")
+                .uri(Property.of(server.getURL().toString() + "/redirect"))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
@@ -122,9 +144,9 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(server.getURL().toString() + "/redirect")
+                .uri(Property.of(server.getURL().toString() + "/redirect"))
                 .options(HttpConfiguration.builder()
-                    .followRedirects(false)
+                    .followRedirects(Property.of(false))
                     .build()
                 )
                 .build();
@@ -147,9 +169,9 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(server.getURL().toString() + "/hello417")
+                .uri(Property.of(server.getURL().toString() + "/hello417"))
                 .options(HttpConfiguration.builder()
-                    .allowFailed(true)
+                    .allowFailed(Property.of(true))
                     .build()
                 )
                 .build();
@@ -173,7 +195,7 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(server.getURL().toString() + "/hello417")
+                .uri(Property.of(server.getURL().toString() + "/hello417"))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
@@ -188,6 +210,37 @@ class RequestTest {
     }
 
     @Test
+    void failedPost() throws Exception {
+        try (
+            ApplicationContext applicationContext = ApplicationContext.run();
+            EmbeddedServer server = applicationContext.getBean(EmbeddedServer.class).start();
+
+        ) {
+            Request task = Request.builder()
+                .id(RequestTest.class.getSimpleName())
+                .type(RequestTest.class.getName())
+                .uri(Property.of(server.getURL().toString() + "/markdown"))
+                .method(Property.of("POST"))
+                .body(Property.of("# hello web!"))
+                .contentType(Property.of("text/markdown"))
+                .options(HttpConfiguration.builder().defaultCharset(Property.of(null)).build())
+                .build();
+
+            RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
+
+            HttpClientResponseException exception = assertThrows(
+                HttpClientResponseException.class,
+                () -> task.run(runContext)
+            );
+
+            assertThat(exception.getResponse().getStatus().getCode(), is(417));
+            assertThat(exception.getMessage(), containsString("hello world"));
+            byte[] content = ((io.kestra.core.http.HttpRequest.ByteArrayRequestBody) exception.getRequest().getBody()).getContent();
+            assertThat(new String(content) , containsString("hello web"));
+        }
+    }
+
+    @Test
     void selfSigned() throws Exception {
         try (
             ApplicationContext applicationContext = ApplicationContext.run(Environment.TEST, "testssl");
@@ -197,10 +250,10 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(server.getURL().toString() + "/hello")
+                .uri(Property.of(server.getURL().toString() + "/hello"))
                 .options(HttpConfiguration.builder()
-                    .timeout(TimeoutConfiguration.builder().readIdleTimeout(Duration.ofSeconds(30)).build())
-                    .ssl(SslOptions.builder().insecureTrustAllCertificates(true).build())
+                    .timeout(TimeoutConfiguration.builder().readIdleTimeout(Property.of(Duration.ofSeconds(30))).build())
+                    .ssl(SslOptions.builder().insecureTrustAllCertificates(Property.of(true)).build())
                     .build()
                 )
                 .build();
@@ -224,10 +277,10 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(server.getURL().toString() + "/hello")
+                .uri(Property.of(server.getURL().toString() + "/hello"))
                 .options(HttpConfiguration.builder()
-                    .allowFailed(true)
-                    .timeout(TimeoutConfiguration.builder().readIdleTimeout(Duration.ofSeconds(30)).build())
+                    .allowFailed(Property.of(true))
+                    .timeout(TimeoutConfiguration.builder().readIdleTimeout(Property.of(Duration.ofSeconds(30))).build())
                     .build()
                 )
                 .build();
@@ -253,9 +306,9 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .method("POST")
-                .uri(server.getURL().toString() + "/post/json")
-                .body(JacksonMapper.ofJson().writeValueAsString(ImmutableMap.of("hello", "world")))
+                .method(Property.of("POST"))
+                .uri(Property.of(server.getURL().toString() + "/post/json"))
+                .body(Property.of(JacksonMapper.ofJson().writeValueAsString(ImmutableMap.of("hello", "world"))))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, Map.of());
@@ -277,13 +330,13 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .method("POST")
-                .contentType(MediaType.APPLICATION_FORM_URLENCODED)
-                .uri(server.getURL().toString() + "/post/url-encoded")
-                .headers(ImmutableMap.of(
+                .method(Property.of("POST"))
+                .contentType(Property.of(MediaType.APPLICATION_FORM_URLENCODED))
+                .uri(Property.of(server.getURL().toString() + "/post/url-encoded"))
+                .headers(Property.of(Map.of(
                     "test", "{{ inputs.test }}"
-                ))
-                .formData(ImmutableMap.of("hello", "world"))
+                )))
+                .formData(Property.of(ImmutableMap.of("hello", "world")))
                 .build();
 
 
@@ -317,17 +370,17 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .method("POST")
-                .contentType(MediaType.MULTIPART_FORM_DATA)
-                .uri(server.getURL().toString() + "/post/multipart")
-                .formData(ImmutableMap.of("hello", "world", "file", fileStorage.toString()))
+                .method(Property.of("POST"))
+                .contentType(Property.of(MediaType.MULTIPART_FORM_DATA))
+                .uri(Property.of(server.getURL().toString() + "/post/multipart"))
+                .formData(Property.of(ImmutableMap.of("hello", "world", "file", fileStorage.toString())))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("world > " + IOUtils.toString(new FileInputStream(file), Charsets.UTF_8)));
+            assertThat(output.getBody(), is("world > " + IOUtils.toString(new FileInputStream(file), StandardCharsets.UTF_8)));
             assertThat(output.getCode(), is(200));
         }
     }
@@ -351,17 +404,17 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .method("POST")
-                .contentType(MediaType.MULTIPART_FORM_DATA)
-                .uri(server.getURL().toString() + "/post/multipart")
-                .formData(ImmutableMap.of("hello", "world", "file", ImmutableMap.of("content", fileStorage.toString(), "name", "test.yml")))
+                .method(Property.of("POST"))
+                .contentType(Property.of(MediaType.MULTIPART_FORM_DATA))
+                .uri(Property.of(server.getURL().toString() + "/post/multipart"))
+                .formData(Property.of(ImmutableMap.of("hello", "world", "file", ImmutableMap.of("content", fileStorage.toString(), "name", "test.yml"))))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("world > " + IOUtils.toString(new FileInputStream(file), Charsets.UTF_8)));
+            assertThat(output.getBody(), is("world > " + IOUtils.toString(new FileInputStream(file), StandardCharsets.UTF_8)));
             assertThat(output.getCode(), is(200));
         }
     }
@@ -376,8 +429,8 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(server.getURL().toString() + "/hello")
-                .encryptBody(true)
+                .uri(Property.of(server.getURL().toString() + "/hello"))
+                .encryptBody(Property.of(true))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
@@ -396,8 +449,8 @@ class RequestTest {
         Request task = Request.builder()
             .id(RequestTest.class.getSimpleName())
             .type(RequestTest.class.getName())
-            .uri("https://github.com/kestra-io.png")
-            .contentType("application/octet-stream")
+            .uri(Property.of("https://github.com/kestra-io.png"))
+            .contentType(Property.of("application/octet-stream"))
             .build();
 
         RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
@@ -419,9 +472,37 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(server.getURL().toString() + "/auth/basic")
+                .uri(Property.of(server.getURL().toString() + "/auth/basic"))
                 .options(HttpConfiguration.builder()
-                    .auth(BasicAuthConfiguration.builder().username("John").password("p4ss").build())
+                    .auth(BasicAuthConfiguration.builder().username(Property.of("John"))
+                        .password(Property.of("p4ss")).build())
+                    .build()
+                )
+                .build();
+
+            RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, Map.of());
+
+            Request.Output output = task.run(runContext);
+
+            assertThat(output.getBody(), is("{\"hello\":\"John\"}"));
+            assertThat(output.getCode(), is(200));
+        }
+    }
+
+    @SuppressWarnings("deprecation")
+    @Test
+    void basicAuthOld() throws Exception {
+        try (
+            ApplicationContext applicationContext = ApplicationContext.run();
+            EmbeddedServer server = applicationContext.getBean(EmbeddedServer.class).start();
+        ) {
+            Request task = Request.builder()
+                .id(RequestTest.class.getSimpleName())
+                .type(RequestTest.class.getName())
+                .uri(Property.of(server.getURL().toString() + "/auth/basic"))
+                .options(HttpConfiguration.builder()
+                    .basicAuthUser("John")
+                    .basicAuthPassword("p4ss")
                     .build()
                 )
                 .build();
@@ -446,9 +527,9 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(server.getURL().toString() + "/auth/bearer")
+                .uri(Property.of(server.getURL().toString() + "/auth/bearer"))
                 .options(HttpConfiguration.builder()
-                    .auth(BearerAuthConfiguration.builder().token(id).build())
+                    .auth(BearerAuthConfiguration.builder().token(Property.of(id)).build())
                     .build()
                 )
                 .build();
@@ -461,6 +542,7 @@ class RequestTest {
             assertThat(output.getCode(), is(200));
         }
     }
+
 
     @Controller
     static class MockController {
@@ -477,6 +559,13 @@ class RequestTest {
         @Get("/hello417")
         HttpResponse<String> hello417() {
             return HttpResponse.status(HttpStatus.EXPECTATION_FAILED).body("{ \"hello\": \"world\" }");
+        }
+
+        @Post("/markdown")
+        @Consumes(MediaType.TEXT_MARKDOWN)
+        @Produces(MediaType.TEXT_MARKDOWN)
+        HttpResponse<String> postMarkdown() {
+            return HttpResponse.status(HttpStatus.EXPECTATION_FAILED).body("# hello world");
         }
 
         @Get("/redirect")
